--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "dev": "vite dev"
+    "dev": "VITE_SOME_KEY=Maisy vite dev"
   },
   "devDependencies": {
     "vite": "^5.2.11"
